nuove configurazioni pom per risolvere un caso isolato di fallimento della build sul test lookup... ma il problema persiste. Eseguendo badua su un altro metodo nella stessa classe di appartenenza, SchemaCompatibility, non dava nessun tipo di fallimento. Nonostante queste nuove configurazione l'errore su badua persiste, in maniera ispegabile poiche senza l'utilizzo di badua e degli altri tool viene  eseguito correttamente. Inoltre il test è corretto perchè vienen eseguito con mvn senza tool aggiuntivi.