@@ -160,6 +160,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
+      <version>5.5.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -236,17 +237,116 @@
        </build>
      </profile-->
 
-    <!-- BADUA PROFILE -->
+
+    <!-- BADUA PROFILE precedente alla modifica per problema su badua sul test specifico lookup  -->
+    <!--<profile>-->
+    <!--  <id>BaDua</id>-->
+    <!--  <activation>-->
+    <!--    <activeByDefault>false</activeByDefault>-->
+    <!--  </activation>-->
+    <!--  &lt;!&ndash;-->
+    <!--  <properties>-->
+    <!--    <argLine>-javaagent:target/dependency/ba-dua-agent-rt-${ba-dua.version}-all.jar -Doutput.file=target/badua.ser</argLine>-->
+    <!--  </properties> &ndash;&gt;-->
+    <!--  &lt;!&ndash; Needed for generate the report &ndash;&gt;-->
+    <!--  <dependencies>-->
+    <!--    <dependency>-->
+    <!--      <groupId>br.usp.each.saeg</groupId>-->
+    <!--      <artifactId>ba-dua-cli</artifactId>-->
+    <!--      <version>${ba-dua.version}</version>-->
+    <!--    </dependency>-->
+    <!--  </dependencies>-->
+    <!--  <build>-->
+    <!--    <plugins>-->
+
+    <!--      &lt;!&ndash; Copy ba-dua-agent-rt from .m2 directory to target/dependency &ndash;&gt;-->
+    <!--      <plugin>-->
+    <!--        <groupId>org.apache.maven.plugins</groupId>-->
+    <!--        <artifactId>maven-dependency-plugin</artifactId>-->
+    <!--        <version>2.10</version>-->
+    <!--        <executions>-->
+    <!--          <execution>-->
+    <!--            <goals>-->
+    <!--              <goal>copy</goal>-->
+    <!--            </goals>-->
+    <!--            <configuration>-->
+    <!--              <artifactItems>-->
+    <!--                <artifactItem>-->
+    <!--                  <groupId>br.usp.each.saeg</groupId>-->
+    <!--                  <artifactId>ba-dua-agent-rt</artifactId>-->
+    <!--                  <classifier>all</classifier>-->
+    <!--                  <version>${ba-dua.version}</version>-->
+    <!--                </artifactItem>-->
+    <!--              </artifactItems>-->
+    <!--            </configuration>-->
+    <!--          </execution>-->
+    <!--        </executions>-->
+    <!--      </plugin>-->
+
+    <!--       &lt;!&ndash;Execute tests &ndash;&gt;-->
+    <!--      <plugin>-->
+    <!--        <groupId>org.apache.maven.plugins</groupId>-->
+    <!--        <artifactId>maven-surefire-plugin</artifactId>-->
+    <!--        <configuration>-->
+    <!--          <argLine>-->
+    <!--            &#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED-->
+    <!--            &#45;&#45;add-opens java.base/java.util=ALL-UNNAMED-->
+    <!--            &#45;&#45;add-opens java.base/java.util.concurrent=ALL-UNNAMED-->
+    <!--            -javaagent:target/dependency/ba-dua-agent-rt-${ba-dua.version}-all.jar-->
+    <!--            -Doutput.file=target/badua.ser-->
+    <!--          </argLine>-->
+    <!--        </configuration>-->
+    <!--      </plugin>-->
+
+
+
+
+    <!--      &lt;!&ndash; Generate report in xml format &ndash;&gt;-->
+    <!--      <plugin>-->
+    <!--        <groupId>org.codehaus.mojo</groupId>-->
+    <!--        <artifactId>exec-maven-plugin</artifactId>-->
+    <!--        <version>1.5.0</version>-->
+    <!--        <executions>-->
+    <!--          <execution>-->
+    <!--            <goals>-->
+    <!--              <goal>java</goal>-->
+    <!--            </goals>-->
+    <!--            <phase>verify</phase>-->
+    <!--            <configuration>-->
+    <!--              <mainClass>br.usp.each.saeg.badua.cli.Report</mainClass>-->
+    <!--              <arguments>-->
+    <!--                <argument>-input</argument>-->
+    <!--                <argument>${project.build.directory}/badua.ser</argument>-->
+    <!--                <argument>-classes</argument>-->
+    <!--                <argument>${project.build.outputDirectory}</argument>-->
+    <!--                <argument>-show-classes</argument>-->
+    <!--                <argument>-show-methods</argument>-->
+    <!--                <argument>-xml</argument>-->
+    <!--                <argument>${project.build.directory}/badua.xml</argument>-->
+    <!--              </arguments>-->
+    <!--            </configuration>-->
+    <!--          </execution>-->
+    <!--        </executions>-->
+    <!--      </plugin>-->
+    <!--    </plugins>-->
+    <!--  </build>-->
+
+    <!--</profile>-->
     <profile>
       <id>BaDua</id>
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
-      <!--
       <properties>
-        <argLine>-javaagent:target/dependency/ba-dua-agent-rt-${ba-dua.version}-all.jar -Doutput.file=target/badua.ser</argLine>
-      </properties> -->
-      <!-- Needed for generate the report -->
+        <argLine>
+          --add-opens java.base/java.lang=ALL-UNNAMED
+          --add-opens java.base/java.util=ALL-UNNAMED
+          --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+          -javaagent:target/dependency/ba-dua-agent-rt-${ba-dua.version}-all.jar
+          -Doutput.file=target/badua.ser
+        </argLine>
+
+      </properties>
       <dependencies>
         <dependency>
           <groupId>br.usp.each.saeg</groupId>
@@ -256,8 +356,6 @@
       </dependencies>
       <build>
         <plugins>
-
-          <!-- Copy ba-dua-agent-rt from .m2 directory to target/dependency -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
@@ -280,23 +378,20 @@
               </execution>
             </executions>
           </plugin>
-
-           <!--Execute tests -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <argLine>
-                -javaagent:target/dependency/ba-dua-agent-rt-0.6.0-all.jar
+                --add-opens java.base/java.lang=ALL-UNNAMED
+                --add-opens java.base/java.util=ALL-UNNAMED
+                --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+                -javaagent:target/dependency/ba-dua-agent-rt-${ba-dua.version}-all.jar
                 -Doutput.file=target/badua.ser
               </argLine>
             </configuration>
           </plugin>
-
-
-
-
-          <!-- Generate report in xml format -->
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
@@ -325,10 +420,10 @@
           </plugin>
         </plugins>
       </build>
-
     </profile>
 
-     <!-- PIT profile isw2-->
+
+    <!-- PIT profile isw2-->
     <profile>
       <id>Pitest</id>
       <activation>
